feat: add auth to doc
